Bug 14400 - sysvolreset: missing unix_info in user session info leads to panic
Summary: sysvolreset: missing unix_info in user session info leads to panic
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Python (show other bugs)
Version: 4.12.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Björn Baumbach
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-04 14:37 UTC by Björn Baumbach
Modified: 2022-08-12 00:25 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Baumbach 2020-06-04 14:37:17 UTC
The unix session info is required and expected by e.g. many vfs modules. Missing unix session info leads to samba panic.

The python sysvolreset code does not use auth_session_info_fill_unix() to fill the required unix info.

Have patch, need bug number.
Comment 1 Douglas Bagnall 2022-08-12 00:25:36 UTC
> Have patch, need bug number.

Patch was presumably these:

72d69eef136d135788942cbdef3775ddd74e241f pysmbd: make sure that session unix info is filled
26fd73de7b25dfc191e5c164d3c375bae2b4c113 tests/pysmbd: fill session unix info in ntacl tests
efea16f367e4b4e7bf140b15a023770470124898 python/samba/provision: set unix session info for user session, used for sysvol acl reset
d72a512e0f1ce265f6bd2af01feebcfe809c9079 pyauth: add python binding for auth_session_info_set_unix()
bde136a280291354c06b528f1ef9e002d265b2a2 s4-auth/unix_token: add new function auth_session_info_set_unix()
d159b4c0a506162f8644943f7a66c590efd0df55 s4-auth/unix_token: separate out filling the unix_info elements in a struct session_info